--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,13 +22,16 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@trpc/server": "^11.4.3",
     "apollo-server-express": "^3.13.0",
+    "cache-manager": "^7.1.0",
     "graphql": "^16.11.0",
+    "ioredis": "^5.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.0.14"
